# automatic-redshift

./: Cargo.toml  README.md  flake.nix
nix/: devshell.nix  package.nix
nix/modules/nixos/: default.nix
src/: color.rs  geoclue.rs  main.rs  wayland.rs
