[package]
name = "automatic-redshift"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
env_logger = "0.11.8"
color-eyre = "0.6.4"
zbus = { version = "5.7.1" }
zvariant = "5.5.3"
wayrs-protocols = { version = "0.14.10", features = [
    "wlr-gamma-control-unstable-v1",
] }
wayrs-client = "1.3.1"
shmemfdrs2 = "1.0.0"
memmap2 = "0.9.5"
bytemuck = "1.23.0"
tokio = { version = "1.45.1", features = ["full"] }
sun = "0.3.1"
futures = "0.3.31"
async-stream = "0.3.6"
jiff = "0.2.14"
vek = "0.17.1"
